# cloppp

./: CMakeLists.txt  LICENSE  README.md
include/clop++/: clop++.h
